// Copyright (c) 2020 The Orbit Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

message FunctionStats {
  uint64 count = 1;
  double total_time_ms = 2;
  double average_time_ms = 3;
  double min_ms = 4;
  double max_ms = 5;
}

message Function {
  string name = 1;
  string pretty_name = 2;
  string loaded_module_path = 3;
  uint64 module_base_address = 4;
  uint64 address = 5;
  uint64 load_bias = 6;
  uint64 size = 7;
  string file = 8;
  uint32 line = 9;

  enum OrbitType {
    kNone = 0;
	kOrbitTimerStart = 1;
	kOrbitTimerStop = 2;
	kOrbitTimerStartAsync = 3;
	kOrbitTimerStopAsync = 4;
	kOrbitTrackInt = 5;
	kOrbitTrackInt64 = 6;
	kOrbitTrackUint = 7;
	kOrbitTrackUint64 = 8;
	kOrbitTrackFloat = 9;
	kOrbitTrackDouble = 10;
	kOrbitTrackFloatAsInt = 11;
	kOrbitTrackDoubleAsInt64 = 12;
  }
  OrbitType type = 10;
  FunctionStats stats = 11;
}
